# physsm

./: .gitignore  README.md  example.ipynb  gh.ipynb  io_handler.py  monte_carlo_ising.py  pyproject.toml  rust_experiment_handler.py  write_format.py
example_folder/experiment_1/: parameter_16x16.txt  parameter_8x8.txt
examples/c_example/: make.py
examples/c_example/src/: main.c
examples/rust_build_experiment/results/: out_Lx=2,Ly=2.txt  out_Lx=3,Ly=3.txt  out_Lx=4,Ly=4.txt  parameter_Lx=2,Ly=2.txt  parameter_Lx=3,Ly=3.txt  parameter_Lx=4,Ly=4.txt
examples/rust_example/src/: main.rs
examples/sim_managers/: c_manager.ipynb  rust_manager.ipynb
experiment_base/: experiment_handler.py  experiment_output.py
ising_rust/results/ising_overview/: parameter_2x2.txt  parameter_4x4.txt  parameter_8x8.txt
python_simulation_manager/: monte_carlo_ising.py
results/test/: parameter_1x1.txt  parameter_2x2.txt
rust_example/src/: main.rs
src/physsm/: _monte_carlo_ising_for_rust.py  abstract_experiment.py  abstract_experiment_builder.py  cpp_builder.py  experiment_data.py  experiment_output.py  path_logger.py  runnner.py  rust_builder.py  uv_python_builder.py
src/python_simulation_manager/: __init__.py  abstract_experiment.py  abstract_experiment_builder.py  cpp_handler.py  experiment_data.py  handler.py  monte_carlo_ising.py  monte_carlo_ising_for_rust.py  output.py  runnner.py  rust_handler.py
tests/c_example/: make.py
tests/c_example/src/: main.c
tests/rust_example/: Cargo.toml
tests/sim_managers/: c_manager.ipynb  rust_manager.ipynb
(+8 files in other folders)
